--- a/app/src/main/res/layout/simplelistitem.xml
+++ b/app/src/main/res/layout/simplelistitem.xml
@@ -26,7 +26,7 @@
                 android:scaleType="fitXY"
                 android:layout_marginBottom="50dp"/>
             <TextView
-                android:id="@+id/tv_nature"
+                android:id="@+id/name"
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -44,7 +44,7 @@
 
 
             <TextView
-                android:id="@+id/tv_des_nature"
+                android:id="@+id/address"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -55,7 +55,7 @@
                 android:textColor="#ff272727"
                 android:textSize="15dp"
                 android:text="Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test"
-                android:layout_below="@+id/tv_nature"
+                android:layout_below="@+id/name"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true" />
