--- a/app/src/main/res/layout/activity_nerby_place.xml
+++ b/app/src/main/res/layout/activity_nerby_place.xml
@@ -10,10 +10,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".NerbyPlace">
 
-  <FrameLayout android:layout_width="match_parent"
+    <FrameLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/container">
-
-
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
   </FrameLayout>
 </RelativeLayout>
