--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_search"
         android:title="@android:string/search_go"
-        android:icon="@drawable/ic_action_locator"
+        android:icon="@mipmap/ic_launcher"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"
         android:visible="true"/>
